Fix z-index for modals

--- a/src/styles/panzoom.css
+++ b/src/styles/panzoom.css
@@ -5,7 +5,7 @@
 	line-height: 1;
 	color: #666;
 	font-size: 11px;
-	z-index: 99999;
+	z-index: 20;
 	box-sizing: content-box;
 	margin: 8px;
 	width: 50px;
